--- a/AFAapp/Views/Shared/_Layout.cshtml
+++ b/AFAapp/Views/Shared/_Layout.cshtml
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    @*<header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-                <div class="container">
+    <header>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-info border-bottom box-shadow mb-3">
+                <div class="container-fluid" style="margin:0; padding: 0">
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Alternating Finite Automata</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -19,48 +19,55 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
+
+
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                                <a class="nav-link text-light" asp-controller="Home" asp-action="Tutorial">Tutorial</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-        </header>*@
+        </header>
 
 
-    <header>
+    <!--<header>
 
         <nav class="navbar navbar-expand navbar-dark bg-info">
             <div class="container-fluid">
 
-                <a class="navbar-brand mr-auto" asp-controller="Home" asp-action="Index">Alternating Finite Automata</a> @* the last part changes the navbar title to Movie App*@
+                <a class="navbar-brand mr-auto" asp-controller="Home" asp-action="Index">Alternating Finite Automata</a>--> @* the last part changes the navbar title*@
 
-            </div>
-            <ul class="navbar-nav flex-grow-1 mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link text-light" asp-controller="Home" asp-action="Index">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                </li>
+            <!--</div>
 
-                <li class="nav-item">
-                    <a class="nav-link text-light" asp-controller="Home" asp-action="Tutorial">Tutorial</a>
-                </li>
+                <ul class="navbar-nav flex-grow-1 mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    </li>
 
-            </ul>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-controller="Home" asp-action="Tutorial">Tutorial</a>
+                    </li>
 
+                </ul>
+                </div>
 
         </nav>
 
 
-    </header>
+    </header>-->
 
 
-    <div class="container">
+    <div class="container-fluid">
 
         <main role="main" class="pb-3">
             @RenderBody()
@@ -68,8 +75,8 @@
     </div>
 
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="border-top footer bg-info ">
+        <div class="container-fluid">
             &copy; 2021 - AFAapp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
