--- a/AFAapp/wwwroot/css/site.css
+++ b/AFAapp/wwwroot/css/site.css
@@ -1,6 +1,8 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
+
 a.navbar-brand {
     white-space: normal;
     text-align: center;
@@ -33,9 +35,11 @@ a {
 
 
 .right-col-p {
-    margin-top: 8%;
-    margin-left: 8%;
+    margin-top: 1%;
+    width: max-content;
+    /*    margin-left: 8%;*/
 }
+
 
 
 /* Sticky footer styles
@@ -84,7 +88,7 @@ body {
     white-space: nowrap;
     line-height: 60px;
     height: 60px;
-    /*    background-color: DarkSalmon;*/
+
 }
 
 
@@ -201,17 +205,24 @@ body {
 
 /*            Tree3*/
 
-.tree-diagram ul {
-    display: flex;
-    position: relative;
-    /* Reset */
-    list-style-type: none;
-    margin: 0;
-    padding: 1rem 0.5rem 0rem 0.5rem;
-    height: 100%;
-    justify-content: center;
+.tree-diagram {
+    overflow: auto;
+    margin: 0 auto;
 
 }
+
+
+    .tree-diagram ul {
+        display: flex;
+        position: relative;
+        /* Reset */
+        list-style-type: none;
+        margin: 0;
+        padding: 1rem 0.5rem 0rem 0.5rem;
+        height: 100%;
+        box-sizing: border-box;
+        justify-content: center;
+    }
 
 
     .tree-diagram ul ul::before {
@@ -226,14 +237,14 @@ body {
         width: 50%;
     }
 
-.tree-diagram li {
-    padding: 1rem 0.5rem 0rem 0.5rem;
-    position: relative;
-    /* Center the content */
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-}
+    .tree-diagram li {
+        padding: 1rem 0.5rem 0rem 0.5rem;
+        position: relative;
+        /* Center the content */
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
 
     .tree-diagram li::before {
         border-right: 1px solid rgba(0, 0, 0, .3);
@@ -280,10 +291,13 @@ body {
 li.tree-diagram__root::before {
     border-right: none;
 }
+/*.tree-diagram .root li:first-child::before {
+    border-right: none;
+}*/
 
-
-
-
+.tree-diagram .root::before {
+    border-right: none;
+}
 
 .tr ul {
     display: table;
